--- a/index.html
+++ b/index.html
@@ -7,5 +7,28 @@
         <link rel="stylesheet" src="styles.css" />
     </head>
     <body>
+        <main>
+            <section>
+                <div class="field">
+                    <label for="fullName">Full Name</label><br />
+                    <input type="text" name="fullName" id="fullName" />
+                </div>
+                <div class="field">
+                    <label for="fullName">Email</label><br />
+                    <input type="email" name="email" id="email" />
+                </div>
+                <div class="field">
+                    <label for="password">Enter Password</label><br />
+                    <input type="password" name="password" id="password" />
+                </div>
+                <div class="field">
+                    <label for="confirmPass">Confirm Password</label><br />
+                    <input type="password" name="confirmPass" id="confirmPass" />
+                </div>
+                <div class="field">
+                    <button type="button">Update Profile</button>
+                </div>
+            </section>
+        </main>
     </body>
 </html>
