--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
         <title>Accessible Form UI</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="styles.css" />
+
         <!-- Google Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
-        <!-- Google Fonts Icons -->
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=visibility" />
+        <!-- Font Awesome Icons -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <main>
@@ -26,14 +27,20 @@
                 </div>
                 <div class="field">
                     <label for="password">Enter Password</label><br />
-                    <input type="password" name="password" id="password" placeholder="Select a strong password" />
+                    <div class="psswd-field">
+                        <input type="password" name="password" id="password" placeholder="Select a strong password" />
+                        <button class="psswd-icon"><i class="fa fa-eye"></i><button>
+                    </div>
                 </div>
                 <div class="field">
                     <label for="confirmPass">Confirm Password</label><br />
-                    <input type="password" name="confirmPass" id="confirmPass" placeholder="Repeat your password" />
+                    <div class="psswd-field">
+                        <input type="password" name="confirmPass" id="confirmPass" placeholder="Repeat your password" />
+                        <button class="psswd-icon"><i class="fa fa-eye"></i><button>
+                    </div>
                 </div>
                 <div class="field">
-                    <button type="button">Update Profile</button>
+                    <button type="button" id="update">Update Profile</button>
                 </div>
             </section>
             <section id="info">
