Make button inside input focusable

--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
                     <label for="password">Enter Password</label><br />
                     <div class="psswd-field">
                         <input type="password" name="password" id="password" placeholder="Select a strong password" />
-                        <button class="psswd-icon"><i class="fa fa-eye"></i><button>
+                        <button type="button" class="focusable"><i class="fa fa-eye psswd-icon"></i></button>
                     </div>
                 </div>
                 <div class="field">
                     <label for="confirmPass">Confirm Password</label><br />
                     <div class="psswd-field">
                         <input type="password" name="confirmPass" id="confirmPass" placeholder="Repeat your password" />
-                        <button class="psswd-icon"><i class="fa fa-eye"></i><button>
+                        <button type="button" class="focusable"><i class="fa fa-eye psswd-icon"></i></button>
                     </div>
                 </div>
                 <div class="field">
