Add progress bar

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
             </section>
             <section id="info">
                 <!--Add image for progress here-->
-                <p>Profile Completeness</p>
+                <label for="progress-bar" id="progress-label">Profile Completeness</label>
+                <progress id="progress-bar" value="65" max="100">65%</progress> 
                 <div id="steps">
                     <p class="done">Create Account</p>
                     <p class="done">Update Roadmap Progress</p>
