fix password icon position

--- a/index.html
+++ b/index.html
@@ -40,11 +40,10 @@
                     </div>
                 </div>
                 <div class="field">
-                    <button type="button" id="update">Update Profile</button>
+                    <button type="button" class="update">Update Profile</button>
                 </div>
             </section>
             <section id="info">
-                <!--Add image for progress here-->
                 <label for="progress-bar" id="progress-label">Profile Completeness</label>
                 <progress id="progress-bar" value="65" max="100">65%</progress> 
                 <div id="steps">
